# apk-protector

./: .gitignore  README.md  build.sh  debug.keystore
app/: build.gradle
app/release/: app-release.apk  output.json
app/src/androidTest/java/com/shanbay/fairy/yasc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/shanbay/fairy/yasc/: MainActivity.java  MyApplication.java  MyService.java  SplashActivity.java
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/shanbay/fairy/yasc/: ExampleUnitTest.java
configure/: Bays4.h  Makefile  c.h  main.cpp
elf/: Makefile  elf.h  main  main.cpp
encrypt/: main.cpp
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle  proguard-rules.pro
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: BayRandom.cc  Bays4.cc  Bays4.h  c.h  md5.c  md5.h  scope_string.h  yarc.cpp  yarc.h
lib/src/main/java/com/shanbay/yasc/: DebugChecker.java  EmulatorChecker.java  Property.java  RepackChecker.java  SecurityToken.java  Utilities.java  Yasc.java
lib/src/test/java/com/shanbay/fairy/lib/: ExampleUnitTest.java
make/: build.sh
make/encode/: Makefile  c.h  main  main.cpp
make/proker/: poker.h
proker/: Android.mk  Application.mk  Makefile  poker.cpp  poker.h
yasc/: Android-Debug.mk  Android-Release.mk  Android.mk  Application.mk  BayRandom.h  Bays4.cc  Bays4.h  CodeTree.cc  CodeTree.h  Makefile  c.h  md5.cpp  md5.h  scope_byte_element.h  scope_dy_lib.h  scope_malloc.h  scope_obj.h  scope_object_element.h  scope_string.h  yarc.cpp  yarc.h
